[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cost_core"
version = "0.1.0"
description = "Cost-Estimation Core Library and CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
    "scipy>=1.11.0"
]

[project.scripts]
ce-core = "cli.ce_core_cli:main"

[tool.setuptools.packages.find]
include = ["cost_core", "cli"]